Added nav tags; noved nav bar below the header; added text to the header; added color to header, footer, and nav bar; added border to nav bar and header; made some minor changes to text; added article tags; and added some breaks.

--- a/boots_n_beer_band/public_html/about_page.html
+++ b/boots_n_beer_band/public_html/about_page.html
@@ -1,62 +1,71 @@
-<!DOCTYPE html>
-<!-- Will Roberts --> <!-- William made an edit to this page. This overwrites an edit Matt made to this same line.-->
+﻿<!DOCTYPE html>
+<!-- Will Roberts --><!-- William made an edit to this page. This overwrites an edit Matt made to this same line.-->
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="css/ryan_nees.css">
   <title>Boots 'N Beer Band: About Page</title>
 </head>
 <body>
-<header>
-<ul>
-	<li><a href="album_page.html">Album Information</a></li>
-	<li><a href="index.html">Index</a></li>
-	<li><a href="info_page.html">Members' Information</a></li>
-	<li><a href="log-in_page.html">Log-in</a></li>
-	<li><a href="schedule_page.html">Schedule</a></li>
-	<li><a href="signup_page.html">Sign up</a></li>
-	<li><a href="store_page.html">Merchandise</a></li>
-</ul>
-<img src="img/bootsnbeer_logo.png" alt="Band Logo" />
-</header>
-<h1>About the Band</h1>
-
-<h3>Beginnings</h3>
-
-<p>Boots 'N Beer first came together unintentionally on stage for karaoke in small bar in Des Moines. After performing, they found that they matched fairly well and had the makings of an actual band. Starting with small gigs, they began making headway with Boots 'N Beer when a scout heard some of their music and got them spots opening for more popular bands performing in the Des Moines area.</p>
-
-<h3>Our Music</h3>
-
-<p>Boots 'N Beer has expertise in many musical genres, including but not limited to:</p>
-<ul>
-    <li>Country</li>
-    <li>Bluegrass</li>
-    <li>Folk</li>
-    <li>Blues</li>
-</ul>
-<p>Upon request, the band can play almost every style or genre of music you desire.</p>
-
-<h3>Tour</h3>
-
-<p>The band is getting ready to head out on their first tour around Iowa towns. They will be going to locations including, but not limited to: </p>
-
-<ul>
-	<li>Indianola</li>
-	<li>Red Oak</li>
-	<li>Pleasantville</li>
-</ul>
-
-<p>For a more complete list of performances, please refer to the "Schedule" page.</p>
-
-<h3>Website source</h3>
-<p>This website was brought to you by students of Simpson College. Click the image below to go Simpson's website.</p>
-<a href="http://simpson.edu"><img alt="Simpson Logo" src="img/psudo_simpsonlogo.png" /></a>
-
-
-
-<footer>
-	&copy; 2017 by Boots 'N Beer
-</footer>
-
+  <header>
+    <h1>Boots N' Beer Band</h1><img src="img/bootsnbeer_logo.png" alt="Band Logo">
+  </header>
+  <nav>
+    <ul>
+      <li>
+        <a href="album_page.html">Album Information</a>
+      </li>
+      <li>
+        <a href="index.html">Index</a>
+      </li>
+      <li>
+        <a href="info_page.html">Members' Information</a>
+      </li>
+      <li>
+        <a href="log-in_page.html">Log-in</a>
+      </li>
+      <li>
+        <a href="schedule_page.html">Schedule</a>
+      </li>
+      <li>
+        <a href="signup_page.html">Sign up</a>
+      </li>
+      <li>
+        <a href="store_page.html">Merchandise</a>
+      </li>
+    </ul>
+  </nav><br>
+  <article>
+    <h1>About the Band</h1>
+    <h3>Beginnings</h3>
+    <p>Boots 'N Beer first came together unintentionally on stage for karaoke in small bar in Des Moines. After performing,
+    they found that they matched fairly well and had the makings of an actual band. Starting with small gigs, they began making
+    headway with Boots 'N Beer when a scout heard some of their music and got them spots opening for more popular bands
+    performing in the Des Moines area.</p>
+    <h3>Our Music</h3>
+    <p>Boots 'N Beer has expertise in many musical genres, including but not limited to:</p>
+    <ul>
+      <li>Country</li>
+      <li>Bluegrass</li>
+      <li>Folk</li>
+      <li>Blues</li>
+    </ul>
+    <p>Upon request, the band can play almost every style or genre of music you desire.</p>
+    <h3>Tour</h3>
+    <p>The band is getting ready to head out on their first tour around Iowa towns. They will be going to locations including,
+    but not limited to:</p>
+    <ul>
+      <li>Indianola</li>
+      <li>Red Oak</li>
+      <li>Pleasantville</li>
+    </ul>
+    <p>For a more complete list of performances, please refer to the "Schedule" page.</p>
+    <h3>Website source</h3>
+    <p>This website was brought to you by students of Simpson College. Click the image below to go Simpson's
+    website.</p><a href="http://simpson.edu"><img alt="Simpson Logo" src="img/psudo_simpsonlogo.png"></a>
+  </article>
+  <footer>
+    &copy; 2017 by Boots 'N Beer
+  </footer>
 </body>
 </html>
