--- a/boots_n_beer_band/public_html/album_page.html
+++ b/boots_n_beer_band/public_html/album_page.html
@@ -1,76 +1,86 @@
-<!-- Matt Rockhold --> 
-<!DOCTYPE html> 
+﻿<!-- Matt Rockhold -->
+<!DOCTYPE html>
 <html lang="en">
-
-
-<head> 
+<head>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="css/ryan_nees.css">
-  <title>Boots N Beer Band Album Page </title> 
+  <title>Boots N Beer Band Album Page</title>
 </head>
-<body> 
-<header> 
-
-<ul>
-	<li><a href="about_page.html">About the Band</a></li>
-	<li><a href="index.html">Index</a></li>
-	<li><a href="info_page.html">Members' Information</a></li>
-	<li><a href="log-in_page.html">Log-in</a></li>
-	<li><a href="schedule_page.html">Schedule</a></li>
-	<li><a href="signup_page.html">Sign up</a></li>
-	<li><a href="store_page.html">Merchandise</a></li>
-</ul>
-
-<img src="img/bootsnbeer_logo.png" alt="Band Logo"/> 
-</header> 
-
-<h1> Album Page </h1>
-
-<p> Main page displays Boots N Beer's latest hit albums. </p>
-<p> Click on this page to see two of Boots N Beer's hottest albums, "Dirty" and "Muddy Spurs". </p>
-
-<table>
-  <thead>
-    <tr>
-      <th>Dirty</th>
-      <th>Muddy Spurs</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Track List:</td>
-      <td>Track List:</td>
-    </tr>
-  </tbody>
-  <tfoot>
-    <tr>
-      <td>"Dirt Roads and Tractor Tires"</td>
-      <td>"Cornbread (Iowa Carbs)"</td>
-    </tr>
-    <tr>
-      <td>"I Got a Woman"</td>
-      <td>"Everything's Better Wrapped in Bacon"</td>
-    </tr>
-    <tr> 
-      <td>"Rollin' Through the Fields"</td> 
-      <td>"Bumpy Towns, Flat Highways"</td>
-    </tr> 
-    <tr> 
-      <td>"The Big One"</td>
-      <td>"Iowa: America's Mini Canada"</td> 
-    </tr>
-    <tr> 
-      <td>"You Only Need Some Grit"</td>
-      <td>"Bootscooters"</td>
-    </tr> 
-  </tfoot>
-</table>
-
-<b> Albums were recorded at Golden Fiddle Records. </b>
-<address> Golden Fiddle Records located at 1234 Shawqa Avenue in Des Moines, IA. </address>
-
-<footer> 
-&copy; by Boots 'N Beer 
-</footer>
-</body> 
+<body>
+  <header>
+    <h1>Boots N' Beer Band</h1><img src="img/bootsnbeer_logo.png" alt="Band Logo">
+  </header>
+  <nav>
+    <ul>
+      <li>
+        <a href="about_page.html">About the Band</a>
+      </li>
+      <li>
+        <a href="index.html">Index</a>
+      </li>
+      <li>
+        <a href="info_page.html">Members' Information</a>
+      </li>
+      <li>
+        <a href="log-in_page.html">Log-in</a>
+      </li>
+      <li>
+        <a href="schedule_page.html">Schedule</a>
+      </li>
+      <li>
+        <a href="signup_page.html">Sign up</a>
+      </li>
+      <li>
+        <a href="store_page.html">Merchandise</a>
+      </li>
+    </ul>
+  </nav><br>
+  <article>
+    <h1>Album Page</h1>
+    <p>Main page displays Boots N Beer's latest hit albums.</p>
+    <p>Click on this page to see two of Boots N Beer's hottest albums, "Dirty" and "Muddy Spurs".</p>
+    <table>
+      <thead>
+        <tr>
+          <th>Dirty</th>
+          <th>Muddy Spurs</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Track List:</td>
+          <td>Track List:</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <td>"Dirt Roads and Tractor Tires"</td>
+          <td>"Cornbread (Iowa Carbs)"</td>
+        </tr>
+        <tr>
+          <td>"I Got a Woman"</td>
+          <td>"Everything's Better Wrapped in Bacon"</td>
+        </tr>
+        <tr>
+          <td>"Rollin' Through the Fields"</td>
+          <td>"Bumpy Towns, Flat Highways"</td>
+        </tr>
+        <tr>
+          <td>"The Big One"</td>
+          <td>"Iowa: America's Mini Canada"</td>
+        </tr>
+        <tr>
+          <td>"You Only Need Some Grit"</td>
+          <td>"Bootscooters"</td>
+        </tr>
+      </tfoot>
+    </table><b>Albums were recorded at Golden Fiddle Records.</b>
+    <address>
+      Golden Fiddle Records located at 1234 Shawqa Avenue in Des Moines, IA.
+    </address>
+  </article>
+  <footer>
+    &copy; by Boots 'N Beer
+  </footer>
+</body>
 </html>
