--- a/boots_n_beer_band/public_html/index.html
+++ b/boots_n_beer_band/public_html/index.html
@@ -1,41 +1,58 @@
-<!-- Matt Rockhold --> 
-<!DOCTYPE html> 
+﻿<!-- Matt Rockhold -->
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="css/ryan_nees.css">
   <title>Boots 'N Beer: About Page</title>
 </head>
 <body>
-<header>
-<ul>
-	<li><a href="about_page.html">About the Band</a></li>
-	<li><a href="album_page.html">Album Information</a></li>
-	<li><a href="info_page.html">Members' Information</a></li>
-	<li><a href="log-in_page.html">Log-in</a></li>
-	<li><a href="schedule_page.html">Schedule</a></li>
-	<li><a href="signup_page.html">Sign up</a></li>
-	<li><a href="store_page.html">Merchandise</a></li>
-</ul>
-
-<img src="img/bootsnbeer_logo.png" alt="Band Logo"/>
-<img src="img/guitar.png" alt="Guitar"/> 
-<img src="img/piano.jpg" alt="Piano"/> 
-</header>
-<h1> Index Page Title: Boots N Beer Band</h1>
-<p>Welcome to the Boots 'N Beer Band official website, home to Iowa's favorite small-town band! See the different links on this page to get any cool novelty items, find out about important dates and events, or just to listen to what kind of music the band has been brewing up!</p>
-
-<p>Need a band for your barn-yard wedding? Feel like listening to something that represents Iowa? Just wanna get out of the house and listen to a great small-town band? If so, then Boots 'N Beer Band is the band for you! They range from country to old rock to even old blues! There's nothing this band can't do!</p>
-
-
-<h2> Additional Information </h2>
-<p>For any additional information or questions about the page or the band Boots 'N Beer in general, please contact Matt Rockhold, the band's manager.</p> 
-
-<address>Phone number: 123-456-7890, email: matt.rockhold@my.simspon.edu</address>
-
-<footer> 
-&copy; 2017 by Boots 'N Beer 
-</footer>
-
+  <header>
+    <h1>Boots N' Beer Band</h1><img src="img/bootsnbeer_logo.png" alt="Band Logo"> <img src="img/guitar.png" alt="Guitar">
+    <img src="img/piano.jpg" alt="Piano">
+  </header>
+  <nav>
+    <ul>
+      <li>
+        <a href="about_page.html">About the Band</a>
+      </li>
+      <li>
+        <a href="album_page.html">Album Information</a>
+      </li>
+      <li>
+        <a href="info_page.html">Members' Information</a>
+      </li>
+      <li>
+        <a href="log-in_page.html">Log-in</a>
+      </li>
+      <li>
+        <a href="schedule_page.html">Schedule</a>
+      </li>
+      <li>
+        <a href="signup_page.html">Sign up</a>
+      </li>
+      <li>
+        <a href="store_page.html">Merchandise</a>
+      </li>
+    </ul>
+  </nav><br>
+  <article>
+    <h1>Boots N' Beer Band Homepage</h1>
+    <p>Welcome to the Boots 'N Beer Band official website, home to Iowa's favorite small-town band! See the different links on
+    this page to get any cool novelty items, find out about important dates and events, or just to listen to what kind of music
+    the band has been brewing up!</p>
+    <p>Need a band for your barn-yard wedding? Feel like listening to something that represents Iowa? Just wanna get out of the
+    house and listen to a great small-town band? If so, then Boots 'N Beer Band is the band for you! They range from country to
+    old rock to even old blues! There's nothing this band can't do!</p>
+    <h2>Additional Information</h2>
+    <p>For any additional information or questions about the page or the band Boots 'N Beer in general, please contact Matt
+    Rockhold, the band's manager.</p>
+    <address>
+      Phone number: 123-456-7890, email: matt.rockhold@my.simspon.edu
+    </address>
+  </article>
+  <footer>
+    &copy; 2017 by Boots 'N Beer
+  </footer>
 </body>
 </html>
