--- a/boots_n_beer_band/public_html/signup_page.html
+++ b/boots_n_beer_band/public_html/signup_page.html
@@ -1,41 +1,58 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!-- Will Roberts -->
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="css/ryan_nees.css">
   <title>Boots 'N Beer: Sign-up</title>
 </head>
 <body>
-<header>
-<ul>
-	<li><a href="about_page.html">About the Band</a></li>
-	<li><a href="album_page.html">Album Information</a></li>
-	<li><a href="index.html">Index</a></li>
-	<li><a href="info_page.html">Members' Information</a></li>
-	<li><a href="log-in_page.html">Log-in</a></li>
-	<li><a href="schedule_page.html">Schedule</a></li>
-	<li><a href="store_page.html">Merchandise</a></li>
-</ul>
-<img src="img/bootsnbeer_logo.png" alt="Band Logo" />
-</header>
-
-<h1>Sign Up Page</h1>
-
-<p>By creating an account, you will be able to keep a shopping cart of merchandise you intend on purchasing if you leave the webiste. You will also be notified whenever information on any of the pages have been updated.</p>
-
-<form>
-<pre>
+  <header>
+    <h1>Boots N' Beer Band</h1><img src="img/bootsnbeer_logo.png" alt="Band Logo">
+  </header>
+  <nav>
+    <ul>
+      <li>
+        <a href="about_page.html">About the Band</a>
+      </li>
+      <li>
+        <a href="album_page.html">Album Information</a>
+      </li>
+      <li>
+        <a href="index.html">Index</a>
+      </li>
+      <li>
+        <a href="info_page.html">Members' Information</a>
+      </li>
+      <li>
+        <a href="log-in_page.html">Log-in</a>
+      </li>
+      <li>
+        <a href="schedule_page.html">Schedule</a>
+      </li>
+      <li>
+        <a href="store_page.html">Merchandise</a>
+      </li>
+    </ul>
+  </nav><br>
+  <article>
+    <h1>Sign Up Page</h1>
+    <p>By creating an account, you will be able to keep a shopping cart of merchandise you intend on purchasing if you leave
+    the webiste. You will also be notified whenever information on any of the pages have been updated.</p>
+    <form>
+      <pre>
 First Name: <input type="text" name="firstname">
 Last Name:  <input type="text" name="lastname">
 Username:   <input type="text" name="username">
 Password:   <input type="text" name="password">
 <input type="submit" value="Submit">
 </pre>
-</form>
-
-<footer>
-	&copy; 2017 by Boots 'N Beer
-</footer>
+    </form>
+    <article>
+      <footer>
+        &copy; 2017 by Boots 'N Beer
+      </footer>
+    </article>
+  </article>
 </body>
 </html>
