--- a/boots_n_beer_band/public_html/info_page.html
+++ b/boots_n_beer_band/public_html/info_page.html
@@ -1,41 +1,59 @@
-<!-- Matt Rockhold --> 
-<!DOCTYPE html> 
+﻿<!-- Matt Rockhold -->
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
-  <title>Boots 'N Beer: About Page</title>
+  <link rel="stylesheet" type="text/css" href="css/ryan_nees.css">
+  <title>Boots 'N Beer: Information Page</title>
 </head>
 <body>
-
-<ul>
-	<li><a href="about_page.html">About the Band</a></li>
-	<li><a href="album_page.html">Album Information</a></li>
-	<li><a href="index.html">Index</a></li>
-	<li><a href="log-in_page.html">Log-in</a></li>
-	<li><a href="schedule_page.html">Schedule</a></li>
-	<li><a href="signup_page.html">Sign up</a></li>
-	<li><a href="store_page.html">Merchandise</a></li>
-</ul>
-<img src="img/bootsnbeer_logo.png" alt="Band Logo" />
-
-<h1> Information Page </h1>
-
- <p>This is an info page to get to know all of the band members of this great country group, Boots N Beer.</p> 
-
-<h2> Biography </h2>
-<img src="img/my_face.jpg" alt="Image of Joe Deere"/>
-<p> Joe Jacks is the lead singer of the band. Upon that, he also plays the mandolin. Joe is from Murray, IA and he enjoys wearing a good pair of boots and blue jeans and watching football on Sundays. </p> 
-<img src="img/ben_face.png" alt="Image of Randy Raccoon"/>
-<p> Randy Raccoon is the lead guitarist and back-up vocals. He plays acoustic, electric, and steel guitar, and also banjo, and fiddle! Randy's favorite country star is Charlie Daniel's and he loves watching the Grand Ole Opry.</p> 
-<img src="img/chase_face.png" alt="Image of Denver Denim"/> 
-<p> Denver Denim is the lead bass and back-up vocals. He also plays harmonica! Denver's favorite movie is the Blue's Brothers because it's hilarious and it has great music in it too! </p>
-<img src="img/duck_kid_page.png" alt="Image of Jake Grit"/> 
-<p> Last on this roster is Jake Grit. Jake is the percussionist and rhythm of the group so he plays the drums, piano, and even the bongos!Jake says that he has playing drums ever since he was a kid, whether it was when he bought his first pair of drums or when he was beating on the trash can outside, he just felt this rhythm inside! </p>    
-
-<footer> 
-&copy; by Boots 'N Beer 
-</footer>
-
+  <nav>
+    <ul>
+      <li>
+        <a href="about_page.html">About the Band</a>
+      </li>
+      <li>
+        <a href="album_page.html">Album Information</a>
+      </li>
+      <li>
+        <a href="index.html">Index</a>
+      </li>
+      <li>
+        <a href="log-in_page.html">Log-in</a>
+      </li>
+      <li>
+        <a href="schedule_page.html">Schedule</a>
+      </li>
+      <li>
+        <a href="signup_page.html">Sign up</a>
+      </li>
+      <li>
+        <a href="store_page.html">Merchandise</a>
+      </li>
+    </ul>
+  </nav><br>
+  <header>
+    <h1>Boots N' Beer Band</h1><img src="img/bootsnbeer_logo.png" alt="Band Logo">
+  </header>
+  <article>
+    <h1>Information Page</h1>
+    <p>This is an info page to get to know all of the band members of this great country group, Boots N Beer.</p>
+    <h2>Biography</h2><img src="img/my_face.jpg" alt="Image of Joe Deere">
+    <p>Joe Jacks is the lead singer of the band. Upon that, he also plays the mandolin. Joe is from Murray, IA and he enjoys
+    wearing a good pair of boots and blue jeans and watching football on Sundays.</p><img src="img/ben_face.png" alt=
+    "Image of Randy Raccoon">
+    <p>Randy Raccoon is the lead guitarist and back-up vocals. He plays acoustic, electric, and steel guitar, and also banjo,
+    and fiddle! Randy's favorite country star is Charlie Daniel's and he loves watching the Grand Ole Opry.</p><img src=
+    "img/chase_face.png" alt="Image of Denver Denim">
+    <p>Denver Denim is the lead bass and back-up vocals. He also plays harmonica! Denver's favorite movie is the Blue's
+    Brothers because it's hilarious and it has great music in it too!</p><img src="img/duck_kid_page.png" alt=
+    "Image of Jake Grit">
+    <p>Last on this roster is Jake Grit. Jake is the percussionist and rhythm of the group, so he plays the drums, piano, and
+    even the bongos! Jake says that he has playing drums ever since he was a kid, whether it was when he bought his first pair
+    of drums or when he was beating on the trash can outside, he just felt this rhythm inside!</p>
+  </article>
+  <footer>
+    &copy; by Boots 'N Beer
+  </footer>
 </body>
-  </html>
+</html>
