--- a/boots_n_beer_band/public_html/log-in_page.html
+++ b/boots_n_beer_band/public_html/log-in_page.html
@@ -1,41 +1,56 @@
-<!-- Matt Rockhold --> 
-<!DOCTYPE html> 
+﻿<!-- Matt Rockhold -->
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="css/ryan_nees.css">
   <title>Boots 'N Beer: Log-in Page</title>
 </head>
-<body> 
-<header>
-<ul>
-	<li><a href="about_page.html">About the Band</a></li>
-	<li><a href="album_page.html">Album Information</a></li>
-	<li><a href="index.html">Index</a></li>
-	<li><a href="info_page.html">Members' Information</a></li>
-	<li><a href="schedule_page.html">Schedule</a></li>
-	<li><a href="signup_page.html">Sign up</a></li>
-	<li><a href="store_page.html">Merchandise</a></li>
-</ul>
-<img src="img/bootsnbeer_logo.png" alt="Band Logo" />
-</header>
-<h1>Log-in Page</h1>
-
-<form>
-<pre>  
+<body>
+  <header>
+    <h1>Boots N' Beer Band</h1><img src="img/bootsnbeer_logo.png" alt="Band Logo">
+  </header>
+  <nav>
+    <ul>
+      <li>
+        <a href="about_page.html">About the Band</a>
+      </li>
+      <li>
+        <a href="album_page.html">Album Information</a>
+      </li>
+      <li>
+        <a href="index.html">Index</a>
+      </li>
+      <li>
+        <a href="info_page.html">Members' Information</a>
+      </li>
+      <li>
+        <a href="schedule_page.html">Schedule</a>
+      </li>
+      <li>
+        <a href="signup_page.html">Sign up</a>
+      </li>
+      <li>
+        <a href="store_page.html">Merchandise</a>
+      </li>
+    </ul>
+  </nav><br>
+  <article>
+    <h1>Log-in Page</h1>
+    <form>
+      <pre>  
 Username: <input type="text" name="username">
 Password: <input type="text" name="password"> 
 <input type="submit" value="log-in">
 </pre>
-</form>
-
-<p>This log-in page is for your favorite Iowa home-town boys, the Boot 'N Beer Band. This page allows you to make an account with this website so you can keep up with the band, find out about important dates, see special brand advertisements, or just to get to know your favorite band members of the group!</p>
-
-<p>Has all links for other pages about the band and their events, schedules, merchandising, and contact information.</p>
-
-<footer> 
-&copy; 2017 Boots 'N Beer Band 
-</footer>
-
+    </form>
+    <p>This log-in page is for your favorite Iowa home-town boys, the Boot 'N Beer Band. This page allows you to make an
+    account with this website so you can keep up with the band, find out about important dates, see special brand
+    advertisements, or just to get to know your favorite band members of the group!</p>
+    <p>Has all links for other pages about the band and their events, schedules, merchandising, and contact information.</p>
+  </article>
+  <footer>
+    &copy; 2017 Boots 'N Beer Band
+  </footer>
 </body>
 </html>
