--- a/boots_n_beer_band/public_html/schedule_page.html
+++ b/boots_n_beer_band/public_html/schedule_page.html
@@ -3,10 +3,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="css/ryan_nees.css">
   <title>Boots 'N Beer: Tour Schedule</title>
 </head>
 <body>
-  <header>
+  <nav>
     <ul>
       <li>
         <a href="about_page.html">About the Band</a>
@@ -29,27 +30,32 @@
       <li>
         <a href="store_page.html">Merchandise</a>
       </li>
-    </ul><img src="img/bootsnbeer_logo.png" alt="Band Logo">
+    </ul>
+  </nav><br>
+  <header>
+    <h1>Boots N' Beer Band</h1><img src="img/bootsnbeer_logo.png" alt="Band Logo">
   </header>
-  <h1>Schedule</h1>
-  <p>For the upcoming tour, Boots 'N Beer will be performing at the following locations:</p>
-  <ol>
-    <li>September 15th - Indianola, Iowa</li>
-    <li>September 18th - Pleasantville, Iowa</li>
-    <li>September 20th - Red Oak, Iowa</li>
-    <li>September 22nd - Storm Lake, Iowa</li>
-    <li>September 25th - Waterloo, Iowa</li>
-    <li>September 27th - Davenport, Iowa</li>
-    <li>September 29th - Marshalltown, Iowa</li>
-    <li>October 2nd - Aurelia, Iowa</li>
-    <li>October 4th - Ottumwa, Iowa</li>
-    <li>October 6th - Columbus, Iowa</li>
-    <li>October 10 - Mount Vernon, Iowa</li>
-    <li>October 15th - Carroll, Iowa</li>
-    <li>October 31st - Ames, Iowa</li>
-    <li>November 4th - Templeton, Iowa</li>
-  </ol>
-  <h3>More Dates To Be Announced</h3><br>
+  <article>
+    <h1>Schedule</h1>
+    <p>For the upcoming tour, Boots 'N Beer will be performing at the following locations:</p>
+    <ol>
+      <li>September 15th - Indianola, Iowa</li>
+      <li>September 18th - Pleasantville, Iowa</li>
+      <li>September 20th - Red Oak, Iowa</li>
+      <li>September 22nd - Storm Lake, Iowa</li>
+      <li>September 25th - Waterloo, Iowa</li>
+      <li>September 27th - Davenport, Iowa</li>
+      <li>September 29th - Marshalltown, Iowa</li>
+      <li>October 2nd - Aurelia, Iowa</li>
+      <li>October 4th - Ottumwa, Iowa</li>
+      <li>October 6th - Columbus, Iowa</li>
+      <li>October 10 - Mount Vernon, Iowa</li>
+      <li>October 15th - Carroll, Iowa</li>
+      <li>October 31st - Ames, Iowa</li>
+      <li>November 4th - Templeton, Iowa</li>
+    </ol>
+    <h3>More Dates To Be Announced</h3><br>
+  </article>
   <footer>
     &copy; 2017 by Boots 'N Beer
   </footer>
