--- a/boots_n_beer_band/public_html/store_page.html
+++ b/boots_n_beer_band/public_html/store_page.html
@@ -3,10 +3,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="css/ryan_nees.css">
   <title>Boots 'N Beer: Merchandise</title>
 </head>
 <body>
   <header>
+    <h1>Boots N' Beer Band</h1><img src="img/bootsnbeer_logo.png" alt="Band Logo">
+  </header>
+  <nav>
     <ul>
       <li>
         <a href="about_page.html">About the Band</a>
@@ -29,28 +33,32 @@
       <li>
         <a href="signup_page.html">Sign up</a>
       </li>
-    </ul><img src="img/bootsnbeer_logo.png" alt="Band Logo">
-  </header>
-  <h1>Items for sale</h1>
-  <h4>Coffee Mug</h4><img src="img/bootsnbeer_mug.png" alt="Photo of Mug">
-  <p>This coffee mug comes in either black or white and has the band's logo on the front of it.</p>
-  <h4>Tee Shirt</h4><img src="img/bootsnbeer_tshirt.png" alt="Photo of T-Shirt">
-  <p>T-shirts with the logo on the front are available in the following sizes:</p>
-  <ul>
-    <li>XS</li>
-    <li>S</li>
-    <li>M</li>
-    <li>L</li>
-    <li>XL</li>
-  </ul>
-  <h4>Mouse Pad</h4><img src="img/bootsnbeer_mousepad.png" alt="Photo of Mousepad">
-  <p>Ergonomic mouse pads with the logo on the front are available in black, white, grey, and brown.<br>
-  <br>
-  <br>
-  <br></p>
-  <h2>More items coming soon!</h2>
-  <footer>
-    &copy; 2017 by Boots 'N Beer
-  </footer>
+    </ul>
+    <nav>
+      <br>
+      <article>
+        <h1>Items for sale</h1>
+        <h4>Coffee Mug</h4><img src="img/bootsnbeer_mug.png" alt="Photo of Mug">
+        <p>This coffee mug comes in either black or white and has the band's logo on the front of it.</p>
+        <h4>Tee Shirt</h4><img src="img/bootsnbeer_tshirt.png" alt="Photo of T-Shirt">
+        <p>T-shirts with the logo on the front are available in the following sizes:</p>
+        <ul>
+          <li>XS</li>
+          <li>S</li>
+          <li>M</li>
+          <li>L</li>
+          <li>XL</li>
+        </ul>
+        <h4>Mouse Pad</h4><img src="img/bootsnbeer_mousepad.png" alt="Photo of Mousepad">
+        <p>Ergonomic mouse pads with the logo on the front are available in black, white, grey, and brown.</p><br>
+        <br>
+        <br>
+        <h2>More items coming soon!</h2>
+      </article>
+      <footer>
+        &copy; 2017 by Boots 'N Beer
+      </footer>
+    </nav>
+  </nav>
 </body>
 </html>
