Made many changes to format of all pages, including pictures

--- a/boots_n_beer_band/public_html/about_page.html
+++ b/boots_n_beer_band/public_html/about_page.html
@@ -58,7 +58,12 @@ in the Des Moines area.</p>
 <br>
 <br>
 
+<p> Also, five lucky winners will be selected at each performance to choose any one of our merchandise 
+to take home for free! Visit our <a href="store_page.html">Store Page</a> to see what you could win! </p>
+
 <p id="schedulerefer">For a more complete list of performances, please refer to the "Schedule" page...</p>
+
+
 
 <h3 class="website_source">Website source</h3>
 <p>This website was brought to you by students of Simpson College. Click the image below to go Simpson's website.</p>
