--- a/boots_n_beer_band/public_html/index.html
+++ b/boots_n_beer_band/public_html/index.html
@@ -9,10 +9,22 @@
   <link rel="stylesheet" type="text/css" href="css_karson_richardson.css">
   
 </head>
+
+<style>
+    h2 {
+        text-align:center;
+        font-size: 35px;
+        font-family: Engravers MT;
+        border-bottom: solid #653119;
+        border-top: solid #653119;
+        padding: 30px 0px 30px 0px;
+    }
+</style>
+
 <body>
 <header>
 
-<nav>
+<nav id="index_nav">
     <ul>
         <li><a href="about_page.html">About the Band</a></li>
         <li><a href="album_page.html">Album Information</a></li>
@@ -24,18 +36,26 @@
     </ul>
 </nav>
 
-<img src="img/bootsnbeer_logo2.png" alt="Band Logo"/>
+<img class="boot" src="img/bootsnbeer_logo2.png" alt="Band Logo"/>
 <img src="img/guitar.png" alt="Guitar"/> 
 <img src="img/piano.jpg" alt="Piano"/> 
 </header>
-<h1> Index Page Title: Boots N Beer Band</h1>
-<p>Welcome to the Boots 'N Beer Band official website, home to Iowa's favorite small-town band! See the different links on this page to get any cool novelty items, find out about important dates and events, or just to listen to what kind of music the band has been brewing up!</p>
+<h1 style="text-align:center;font-size: 35px;font-family: Engravers MT;
+border-bottom: solid #653119;border-top: solid #653119;padding: 30px 0px 30px 0px;"> Boots N Beer Band</h1>
+<p>Welcome to the Boots 'N Beer Band official website, home to Iowa's favorite 
+small-town band! See the different links on this page to get any cool novelty items, 
+find out about important dates and events, or just to listen to what kind of music the band has been brewing up!</p>
 
-<p>Need a band for your barn-yard wedding? Feel like listening to something that represents Iowa? Just wanna get out of the house and listen to a great small-town band? If so, then Boots 'N Beer Band is the band for you! They range from country to old rock to even old blues! There's nothing this band can't do!</p>
+<p>Need a band for your barn-yard wedding? Feel like listening to something that represents Iowa? 
+Just wanna get out of the house and listen to a great small-town band? If so, then Boots 'N Beer 
+Band is the band for you! They range from country to old rock to even old blues! There's nothing 
+this band can't do!</p>
 
 
 <h2> Additional Information </h2>
-<p>For any additional information or questions about the page or the band Boots 'N Beer in general, please contact Matt Rockhold, the band's manager.</p> 
+<p>For any additional information or questions about the page or the band Boots 'N Beer in general, 
+please contact Matt Rockhold, the band's manager.</p> 
+<p> To contact Matt Rockhold, you can also visit <a href="http://simpson.edu">Simpson College's</a> webpage.</p>
 
 <address>Phone number: 123-456-7890, email: matt.rockhold@my.simspon.edu</address>
 
