--- a/boots_n_beer_band/public_html/info_page.html
+++ b/boots_n_beer_band/public_html/info_page.html
@@ -23,13 +23,13 @@
     </ul>
 </nav>
 
-<img src="img/bootsnbeer_logo2.png" alt="Band Logo" />
+<img class="boot" src="img/bootsnbeer_logo2.png" alt="Band Logo" />
 
 <h1> Information Page </h1>
 
  <p>This is an info page to get to know all of the band members of this great country group, Boots N Beer.</p> 
 
-<h2> Biography </h2>
+<h2 class="biography"> Biography </h2>
 <img src="img/my_face.jpg" alt="Image of Joe Deere"/>
 <p> Joe Jacks is the lead singer of the band. Upon that, he also plays the mandolin. Joe is from Murray, IA and he enjoys wearing a good pair of boots and blue jeans and watching football on Sundays. </p> 
 <img src="img/ben_face.png" alt="Image of Randy Raccoon"/>
