--- a/boots_n_beer_band/public_html/schedule_page.html
+++ b/boots_n_beer_band/public_html/schedule_page.html
@@ -12,7 +12,7 @@
 <body>
 <header>
 
-<nav>
+<nav id="schedule_nav">
     <ul>
         <li><a href="about_page.html">About the Band</a></li>
         <li><a href="album_page.html">Album Information</a></li>
@@ -24,7 +24,7 @@
     </ul>
 </nav>
 
-<img src="img/bootsnbeer_logo.png" alt="Band Logo" />
+<img class="boot" src="img/bootsnbeer_logo.png" alt="Band Logo" />
 </header>
 
 <h1>Schedule</h1>
