--- a/boots_n_beer_band/public_html/store_page.html
+++ b/boots_n_beer_band/public_html/store_page.html
@@ -12,7 +12,7 @@
 <body>
 <header>
 
-<nav>
+<nav id="merchandise_nav">
     <ul>
         <li><a href="about_page.html">About the Band</a></li>
         <li><a href="album_page.html">Album Information</a></li>
@@ -23,7 +23,7 @@
         <li><a href="signup_page.html">Sign up</a></li>
     </ul>
 </nav>
-<img src="img/bootsnbeer_logo.png" alt="Band Logo" />
+<img class="boot" src="img/bootsnbeer_logo2.png" alt="Band Logo" />
 </header>
 
 <h1>Items for sale</h1>
@@ -35,7 +35,7 @@
 <h4>Tee Shirt</h4>
 <img src="img/bootsnbeer_tshirt.png" alt="Photo of T-Shirt" />
 <p>T-shirts with the logo on the front are available in the following sizes:</p>
-<nav>
+<nav id="sizes">
     <ul>
 	    <li>XS</li>
 	    <li>S</li>
