Added article styling and borders, as well as borders to the footers and the table on the Albums page. Added linked image to header and scaled it to desired size. Moved nav bar below header on pages I missed last update. Deleted graphic from header as it was replaced. Inserted ID Selector for sizes on store page.

--- a/boots_n_beer_band/public_html/about_page.html
+++ b/boots_n_beer_band/public_html/about_page.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <header>
-    <h1>Boots N' Beer Band</h1><img src="img/bootsnbeer_logo.png" alt="Band Logo">
+    <h1>Boots N' Beer Band</h1>
   </header>
   <nav>
     <ul>
       <li>
-        <a href="album_page.html">Album Information</a>
+        <a href="album_page.html">Albums</a>
       </li>
       <li>
         <a href="index.html">Index</a>
@@ -63,7 +63,7 @@
     <h3>Website source</h3>
     <p>This website was brought to you by students of Simpson College. Click the image below to go Simpson's
     website.</p><a href="http://simpson.edu"><img alt="Simpson Logo" src="img/psudo_simpsonlogo.png"></a>
-  </article>
+  </article><br>
   <footer>
     &copy; 2017 by Boots 'N Beer
   </footer>
