--- a/boots_n_beer_band/public_html/album_page.html
+++ b/boots_n_beer_band/public_html/album_page.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <header>
-    <h1>Boots N' Beer Band</h1><img src="img/bootsnbeer_logo.png" alt="Band Logo">
+    <h1>Boots N' Beer Band</h1>
   </header>
   <nav>
     <ul>
       <li>
-        <a href="about_page.html">About the Band</a>
+        <a href="about_page.html">About Us</a>
       </li>
       <li>
         <a href="index.html">Index</a>
@@ -78,7 +78,7 @@
     <address>
       Golden Fiddle Records located at 1234 Shawqa Avenue in Des Moines, IA.
     </address>
-  </article>
+  </article><br>
   <footer>
     &copy; by Boots 'N Beer
   </footer>
