--- a/boots_n_beer_band/public_html/index.html
+++ b/boots_n_beer_band/public_html/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
   <header>
-    <h1>Boots N' Beer Band</h1><img src="img/bootsnbeer_logo.png" alt="Band Logo"> <img src="img/guitar.png" alt="Guitar">
+    <h1>Boots N' Beer Band</h1><img src="img/guitar.png" alt="Guitar">
     <img src="img/piano.jpg" alt="Piano">
   </header>
   <nav>
     <ul>
       <li>
-        <a href="about_page.html">About the Band</a>
+        <a href="about_page.html">About Us</a>
       </li>
       <li>
-        <a href="album_page.html">Album Information</a>
+        <a href="album_page.html">Albums</a>
       </li>
       <li>
         <a href="info_page.html">Members' Information</a>
@@ -50,7 +50,7 @@
     <address>
       Phone number: 123-456-7890, email: matt.rockhold@my.simspon.edu
     </address>
-  </article>
+  </article><br>
   <footer>
     &copy; 2017 by Boots 'N Beer
   </footer>
