--- a/boots_n_beer_band/public_html/info_page.html
+++ b/boots_n_beer_band/public_html/info_page.html
@@ -7,13 +7,16 @@
   <title>Boots 'N Beer: Information Page</title>
 </head>
 <body>
+  <header>
+    <h1>Boots N' Beer Band</h1><img src="img/bootsnbeer_logo.png" alt="Band Logo">
+  </header>
   <nav>
     <ul>
       <li>
-        <a href="about_page.html">About the Band</a>
+        <a href="about_page.html">About Us</a>
       </li>
       <li>
-        <a href="album_page.html">Album Information</a>
+        <a href="album_page.html">Albums</a>
       </li>
       <li>
         <a href="index.html">Index</a>
@@ -32,9 +35,6 @@
       </li>
     </ul>
   </nav><br>
-  <header>
-    <h1>Boots N' Beer Band</h1><img src="img/bootsnbeer_logo.png" alt="Band Logo">
-  </header>
   <article>
     <h1>Information Page</h1>
     <p>This is an info page to get to know all of the band members of this great country group, Boots N Beer.</p>
@@ -51,7 +51,7 @@
     <p>Last on this roster is Jake Grit. Jake is the percussionist and rhythm of the group, so he plays the drums, piano, and
     even the bongos! Jake says that he has playing drums ever since he was a kid, whether it was when he bought his first pair
     of drums or when he was beating on the trash can outside, he just felt this rhythm inside!</p>
-  </article>
+  </article><br>
   <footer>
     &copy; by Boots 'N Beer
   </footer>
