--- a/boots_n_beer_band/public_html/log-in_page.html
+++ b/boots_n_beer_band/public_html/log-in_page.html
@@ -8,15 +8,15 @@
 </head>
 <body>
   <header>
-    <h1>Boots N' Beer Band</h1><img src="img/bootsnbeer_logo.png" alt="Band Logo">
+    <h1>Boots N' Beer Band</h1>
   </header>
   <nav>
     <ul>
       <li>
-        <a href="about_page.html">About the Band</a>
+        <a href="about_page.html">About Us</a>
       </li>
       <li>
-        <a href="album_page.html">Album Information</a>
+        <a href="album_page.html">Albums</a>
       </li>
       <li>
         <a href="index.html">Index</a>
@@ -48,7 +48,7 @@ Password: <input type="text" name="password">
     account with this website so you can keep up with the band, find out about important dates, see special brand
     advertisements, or just to get to know your favorite band members of the group!</p>
     <p>Has all links for other pages about the band and their events, schedules, merchandising, and contact information.</p>
-  </article>
+  </article><br>
   <footer>
     &copy; 2017 Boots 'N Beer Band
   </footer>
