--- a/boots_n_beer_band/public_html/schedule_page.html
+++ b/boots_n_beer_band/public_html/schedule_page.html
@@ -7,13 +7,16 @@
   <title>Boots 'N Beer: Tour Schedule</title>
 </head>
 <body>
-  <nav>
+  <header>
+    <h1>Boots N' Beer Band</h1>
+  </header>
+   <nav>
     <ul>
       <li>
-        <a href="about_page.html">About the Band</a>
+        <a href="about_page.html">About Us</a>
       </li>
       <li>
-        <a href="album_page.html">Album Information</a>
+        <a href="album_page.html">Albums</a>
       </li>
       <li>
         <a href="index.html">Index</a>
@@ -32,9 +35,6 @@
       </li>
     </ul>
   </nav><br>
-  <header>
-    <h1>Boots N' Beer Band</h1><img src="img/bootsnbeer_logo.png" alt="Band Logo">
-  </header>
   <article>
     <h1>Schedule</h1>
     <p>For the upcoming tour, Boots 'N Beer will be performing at the following locations:</p>
@@ -55,7 +55,7 @@
       <li>November 4th - Templeton, Iowa</li>
     </ol>
     <h3>More Dates To Be Announced</h3><br>
-  </article>
+  </article><br>
   <footer>
     &copy; 2017 by Boots 'N Beer
   </footer>
