--- a/boots_n_beer_band/public_html/store_page.html
+++ b/boots_n_beer_band/public_html/store_page.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <header>
-    <h1>Boots N' Beer Band</h1><img src="img/bootsnbeer_logo.png" alt="Band Logo">
+    <h1>Boots N' Beer Band</h1>
   </header>
   <nav>
     <ul>
       <li>
-        <a href="about_page.html">About the Band</a>
+        <a href="about_page.html">About Us</a>
       </li>
       <li>
         <a href="album_page.html">Album Information</a>
@@ -42,13 +42,7 @@
         <p>This coffee mug comes in either black or white and has the band's logo on the front of it.</p>
         <h4>Tee Shirt</h4><img src="img/bootsnbeer_tshirt.png" alt="Photo of T-Shirt">
         <p>T-shirts with the logo on the front are available in the following sizes:</p>
-        <ul>
-          <li>XS</li>
-          <li>S</li>
-          <li>M</li>
-          <li>L</li>
-          <li>XL</li>
-        </ul>
+        <p id="sizes"> S, M, L, XL, XXL, XXXL.</p>
         <h4>Mouse Pad</h4><img src="img/bootsnbeer_mousepad.png" alt="Photo of Mousepad">
         <p>Ergonomic mouse pads with the logo on the front are available in black, white, grey, and brown.</p><br>
         <br>
