--- a/boots_n_beer_band/public_html/signup_page.html
+++ b/boots_n_beer_band/public_html/signup_page.html
@@ -13,10 +13,10 @@
   <nav>
     <ul>
       <li>
-        <a href="about_page.html">About the Band</a>
+        <a href="about_page.html">About Us</a>
       </li>
       <li>
-        <a href="album_page.html">Album Information</a>
+        <a href="album_page.html">Albums</a>
       </li>
       <li>
         <a href="index.html">Index</a>
@@ -48,7 +48,7 @@ Password:   <input type="text" name="password">
 <input type="submit" value="Submit">
 </pre>
     </form>
-    </article>
+    </article><br>
       <footer>
         &copy; 2017 by Boots 'N Beer
       </footer>
