Added some content to all pages

--- a/boots_n_beer_band/public_html/album_page.html
+++ b/boots_n_beer_band/public_html/album_page.html
@@ -12,7 +12,6 @@
   <style>
   table {
     border-collapse: collapse;
-    float: center;
   }
   table, th {
     border: solid;
@@ -43,13 +42,15 @@
     </ul>
 </nav>
 
-<img class="boot"src="img/bootsnbeer_logo2.png" alt="Band Logo"/> 
+<img class="boot" src="img/bootsnbeer_logo2.png" alt="Band Logo"/> 
 </header> 
 
 <h1> Album Page </h1>
 
 <p> Main page displays Boots N Beer's latest hit albums. </p>
+
 <p> Here are two of Boots N Beer's hottest albums, "Dirty" and "Muddy Spurs". </p>
+
 <p> Both "Dirty" and "Muddy Spurs" were recorded in Des Moines, Iowa, which is close to where
 Boots N Beer will have the first few concerts of their upcoming tour! </p>
 
@@ -90,7 +91,12 @@ Boots N Beer will have the first few concerts of their upcoming tour! </p>
   </tfoot>
 </table>
 
+<p>Looking for your favorite song but don't want to purchase the whole album? 
+Boots N Beer will be releasing various songs on ITunes and Google Music soon! 
+Make sure you stay tuned to find out when it is official!</p>
+
 <b> Albums were recorded at Golden Fiddle Records. </b>
+
 <address> Golden Fiddle Records located at 1234 Shawqa Avenue in Des Moines, IA. </address>
 
 <footer> 
