--- a/boots_n_beer_band/public_html/index.html
+++ b/boots_n_beer_band/public_html/index.html
@@ -7,8 +7,6 @@
   <title>Boots 'N Beer: About Page</title>
   
   <link rel="stylesheet" type="text/css" href="css_karson_richardson.css">
-  
-</head>
 
 <style>
     h2 {
@@ -20,6 +18,10 @@
         padding: 30px 0px 30px 0px;
     }
 </style>
+
+</head>
+
+
 
 <body>
 <header>
@@ -37,9 +39,13 @@
 </nav>
 
 <img class="boot" src="img/bootsnbeer_logo2.png" alt="Band Logo"/>
+
 <img src="img/guitar.png" alt="Guitar"/> 
+
 <img src="img/piano.jpg" alt="Piano"/> 
+
 </header>
+
 <h1 style="text-align:center;font-size: 35px;font-family: Engravers MT;
 border-bottom: solid #653119;border-top: solid #653119;padding: 30px 0px 30px 0px;"> Boots N Beer Band</h1>
 <p>Welcome to the Boots 'N Beer Band official website, home to Iowa's favorite 
@@ -51,10 +57,14 @@ Just wanna get out of the house and listen to a great small-town band? If so, th
 Band is the band for you! They range from country to old rock to even old blues! There's nothing 
 this band can't do!</p>
 
+<p>Each band member can play a variety of instruments and have top notch vocals. If you are in search of a barn-yard
+hoe-down, join us at one of our participating venues and purchase your tickets today!</p>
+
 
 <h2> Additional Information </h2>
 <p>For any additional information or questions about the page or the band Boots 'N Beer in general, 
 please contact Matt Rockhold, the band's manager.</p> 
+
 <p> To contact Matt Rockhold, you can also visit <a href="http://simpson.edu">Simpson College's</a> webpage.</p>
 
 <address>Phone number: 123-456-7890, email: matt.rockhold@my.simspon.edu</address>
