--- a/boots_n_beer_band/public_html/schedule_page.html
+++ b/boots_n_beer_band/public_html/schedule_page.html
@@ -6,10 +6,12 @@
   <meta charset="utf-8">
   <title>Boots 'N Beer: Tour Schedule</title>
   
-  <link rel="stylesheet" type="text/css" href="css_karson_richardson.css"><br>
+  <link rel="stylesheet" type="text/css" href="css_karson_richardson.css">
   
 </head>
+
 <body>
+
 <header>
 
 <nav id="schedule_nav">
@@ -43,6 +45,11 @@
 	<li>October 4th	- Ottumwa, Iowa</li>
 	<li>October 6th	- Columbus, Iowa</li>
 </ol>
+
+<p>Miss one of the events? Boots N Beer offers video replays of the 
+concerts for anyone who would like to see the concert. BEWARE: A replay 
+of a concert may not be as root'n toot'n as a real concert! So, 
+be sure to buy your tickets today!</p>
 
 
 
