--- a/boots_n_beer_band/public_html/signup_page.html
+++ b/boots_n_beer_band/public_html/signup_page.html
@@ -27,7 +27,9 @@
 
 <h1>Sign Up Page</h1>
 
-<p>By creating an account, you will be able to keep a shopping cart of merchandise you intend on purchasing if you leave the webiste. You will also be notified whenever information on any of the pages have been updated.</p>
+<p>By creating an account, you will be able to keep a shopping cart of merchandise you 
+intend on purchasing if you leave the website. You will also be notified whenever information 
+on any of the pages have been updated.</p>
 
 <form>
 <pre>
