--- a/boots_n_beer_band/public_html/store_page.html
+++ b/boots_n_beer_band/public_html/store_page.html
@@ -23,18 +23,28 @@
         <li><a href="signup_page.html">Sign up</a></li>
     </ul>
 </nav>
+
 <img class="boot" src="img/bootsnbeer_logo2.png" alt="Band Logo" />
+
 </header>
 
 <h1>Items for sale</h1>
 
 <h4>Coffee Mug</h4>
+
 <img src="img/bootsnbeer_mug.png" alt="Photo of Mug" />
+
 <p>This coffee mug comes in either black or white and has the band's logo on the front of it.</p>
 
 <h4>Tee Shirt</h4>
+
 <img src="img/bootsnbeer_tshirt.png" alt="Photo of T-Shirt" />
+
 <p>T-shirts with the logo on the front are available in the following sizes:</p>
+
+<p>Looking for a custom Tee? Contact the owner, Matt Rockhold, and he will set you up with
+some of the root'nest toot'nest Tees around town.</p>
+
 <nav id="sizes">
     <ul>
 	    <li>XS</li>
