--- a/boots_n_beer_band/public_html/about_page.html
+++ b/boots_n_beer_band/public_html/about_page.html
@@ -25,7 +25,9 @@
 </nav>
 
 <img class="boot" src="img/bootsnbeer_logo2.png" alt="Band Logo" />
+
 </header>
+
 <h1 style="text-align:center;font-size: 35px;font-family: Engravers MT;
 border-bottom: solid #653119;border-top: solid #653119;padding: 30px 0px 30px 0px;">About the Band</h1>
 
@@ -37,9 +39,22 @@ makings of an actual band. Starting with small gigs, they began making headway w
 when a scout heard some of their music and got them spots opening for more popular bands performing 
 in the Des Moines area.</p>
 
+<p>After meeting in a small bar in Des Moines, the band members discovered that 
+they're band's heritage stretches all the way back into the old West. Joe Jack's 
+great great grandfather, Jimmy Jack, was the sheriff of a small town just north 
+of Texas, called Bootsinburg. His deputy and right hand man, Russell Raccoon, 
+happens to be Randy Raccoon's great great grandfather. It may seem like a coincidence, 
+but the members seem to think it is destiny. In Bootsinburg, the local community 
+stable owner was named Danny Denim. You guessed it, Danny Denim was the great 
+great grandfather of the one and only Denver Denim. Jake Grit's family has been 
+a part of Bootsinburg's history for generation after generation as saloon owners, 
+barbers, even bandits!</p>
+
 <h3 class="tour">Tour</h3>
 
-<p>The band is getting ready to head out on their first tour around Iowa towns. They will be going to locations including, but not limited to: </p>
+<p>The band is getting ready to head out on their first tour around Iowa towns. You can also 
+snag a glance at this beauty of a band during a local single performance! They will be going to
+locations including, but not limited to: </p>
 
 <ul class="locations">
     <li>Indianola</li>
@@ -61,12 +76,17 @@ in the Des Moines area.</p>
 <p> Also, five lucky winners will be selected at each performance to choose any one of our merchandise 
 to take home for free! Visit our <a href="store_page.html">Store Page</a> to see what you could win! </p>
 
+<p>Boots N Beer hosts giveaways of this nature frequently, so be sure to visit the page 
+often to make sure you never miss out on the deal of a lifetime!</p>
+
 <p id="schedulerefer">For a more complete list of performances, please refer to the "Schedule" page...</p>
 
 
 
 <h3 class="website_source">Website source</h3>
+
 <p>This website was brought to you by students of Simpson College. Click the image below to go Simpson's website.</p>
+
 <a href="http://simpson.edu"><img id="simpsonlogo" alt="Simpson Logo" src="img/psudo_simpsonlogo.png" /></a>
 
 
