--- a/boots_n_beer_band/public_html/log-in_page.html
+++ b/boots_n_beer_band/public_html/log-in_page.html
@@ -35,9 +35,13 @@ Password: <input type="text" name="password">
 </pre>
 </form>
 
-<p>This log-in page is for your favorite Iowa home-town boys, the Boot 'N Beer Band. This page allows you to make an account with this website so you can keep up with the band, find out about important dates, see special brand advertisements, or just to get to know your favorite band members of the group!</p>
+<p>This log-in page is for your favorite Iowa home-town boys, the Boot 'N Beer Band. 
+This page allows you to make an account with this website so you can keep up with the 
+band, find out about important dates, see special brand advertisements, or just to get 
+to know your favorite band members of the group!</p>
 
-<p>Has all links for other pages about the band and their events, schedules, merchandising, and contact information.</p>
+<p>Has all links for other pages about the band and their events, schedules, merchandising, 
+and contact information.</p>
 
 <footer> 
 &copy; 2017 Boots 'N Beer Band 
