--- a/boots_n_beer_band/public_html/about_page.html
+++ b/boots_n_beer_band/public_html/about_page.html
@@ -33,13 +33,13 @@ border-bottom: solid #653119;border-top: solid #653119;padding: 30px 0px 30px 0p
 
 <h3 class="beginnings">Beginnings</h3>
 
-<p class="beginnings">Boots 'N Beer first came together unintentionally on stage for karaoke in 
+<p>Boots 'N Beer first came together unintentionally on stage for karaoke in 
 small bar in Des Moines. After performing, they found that they matched fairly well and had the 
 makings of an actual band. Starting with small gigs, they began making headway with Boots 'N Beer 
 when a scout heard some of their music and got them spots opening for more popular bands performing 
 in the Des Moines area.</p>
 
-<p>After meeting in a small bar in Des Moines, the band members discovered that 
+<p class="beginnings">After meeting in a small bar in Des Moines, the band members discovered that 
 they're band's heritage stretches all the way back into the old West. Joe Jack's 
 great great grandfather, Jimmy Jack, was the sheriff of a small town just north 
 of Texas, called Bootsinburg. His deputy and right hand man, Russell Raccoon, 
