--- a/boots_n_beer_band/public_html/schedule_page.html
+++ b/boots_n_beer_band/public_html/schedule_page.html
@@ -26,7 +26,7 @@
     </ul>
 </nav>
 
-<img class="boot" src="img/bootsnbeer_logo.png" alt="Band Logo" />
+<img class="boot" src="img/bootsnbeer_logo2.png" alt="Band Logo" />
 </header>
 
 <h1>Schedule</h1>
